Fixed content spacing in PDF

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -38,15 +38,6 @@ body {
   }
 }
 
-.analysis-container {
-  break-before: auto;
-}
-
-.ai-analysis-content {
-  break-inside: auto;
-  break-before: auto;
-}
-
 /* Pico Overrides */
 table input:not([type=checkbox],[type=radio]) {
   @apply mb-0;
